--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                 </div>
                 <div class='flex-c codeProContainer' style="background-color: #d6454c8a;">
                     <div class="flex-r codeProCommon" style = 'font-family: cursive; font-weight: 600; font-size: 1.3rem;'>
-                        <a target = '__blank' style = 'color:#562963;' href = "https://www.codechef.com/users/rajsrivastava">Codechef</a>
+                        <a target = '__blank' style = 'color:#562963;' href = "https://www.codechef.com/users/satyamsricr07">Codechef</a>
                     </div>
                     <div class="flex-r codeProCommon" style="border-top: 2px solid #382525;">
                         <div class='flex-r' style="width: 88%;justify-content: space-evenly;">
@@ -504,7 +504,7 @@
                 </div>
                 <div class="flex-c codeProContainer" style="background: linear-gradient(90deg,#e3e31f5c 6%,#3e499869 48%,#f33240ab 92%);">
                     <div class="flex-r codeProCommon" style = 'font-family: cursive; font-weight: 600; font-size: 1.3rem;'>
-                        <a target = '__blank' style='color: #46f0e6;' href='https://codeforces.com/profile/rajsrivastava'>Codeforces</a>
+                        <a target = '__blank' style='color: #46f0e6;' href='https://codolio.com/profile/satyam07'>Codolio</a>
                     </div>
                 </div>
                 <div class="flex-c codeProContainer" style="background-color: darkgrey;">
