--- a/index.html
+++ b/index.html
@@ -550,11 +550,11 @@
                 </div>
             <div class='adress-area'>
                 <div>Want to get in touch !!</div>
-                <div><a target = '__blank' href = 'https://drive.google.com/file/d/1WVf3zeIvYOonHciQng8y-Idad1HZEhey/view?usp=sharing' style='color: white;'>Link to my Resume</a></div>
+                <div><a target = '__blank' href = 'https://drive.google.com/file/d/1RZ_y3hi3frBPybf6gAfRs6zXupFWbHHM/view?usp=sharing' style='color: white;'>Link to my Resume</a></div>
                 <div style = 'color: rgb(22, 211, 211);font-size: 1.3rem;margin-top: 1rem;'>We can connect via :</div>
                 <div style = 'margin-top: 8px;'>
-                    <div class='contact-detail-list' style="margin-bottom: 6px;"><strong style="text-decoration: underline;">E-Mail</strong>  <span style="color: white;">rajsriv.14@gmail.com</span></div>
-                    <div class='contact-detail-list'><strong style="text-decoration: underline;">Mobile</strong>  <span style="color: white;">9554831603</span></div>    
+                    <div class='contact-detail-list' style="margin-bottom: 6px;"><strong style="text-decoration: underline;">E-Mail</strong>  <span style="color: white;">satyamsricode07@gmail.com</span></div>
+                    <div class='contact-detail-list'><strong style="text-decoration: underline;">Mobile</strong>  <span style="color: white;">7268999602</span></div>    
                 </div>
             </div>
 
